Generate js code on server if applet doesn't support Changes in view